# contracts

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  HALBORN_AUDIT_MERGE_DECISIONS.md  Justfile  LICENSE  Makefile  README.md  SECURITY.md  clippy.toml  codecov.yml  compose.yaml  justfile  relayer.Dockerfile  release-plz.toml  rust-toolchain.toml  test.sh
bots/: Cargo.toml  README.md  accumulator.service
bots/accumulator/: Cargo.toml  README.md
bots/accumulator/src/: lib.rs  main.rs  rpc.rs
bots/common/: Cargo.toml
bots/common/src/: lib.rs
bots/liquidator/: .dockerignore  .env.example  Cargo.toml  IMPLEMENTATION.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
bots/liquidator/.cargo/: config.toml
bots/liquidator/scripts/: run-mainnet.sh  run-testnet.sh
bots/liquidator/src/: config.rs  executor.rs  inventory.rs  lib.rs  liquidation_strategy.rs  liquidator.rs  main.rs  near_stubs.rs  oracle.rs  profitability.rs  rebalancer.rs  rpc.rs  scanner.rs  service.rs  strategy.rs  tests.rs
bots/src/: accumulator.rs  lib.rs  liquidator.rs  near.rs  swap.rs  types.rs
bots/src/swap/: intents.rs  mod.rs  rhea.rs
client/vault/: .env.smoketest.example  .gitignore  Cargo.toml  Makefile  README.md  justfile  smoke_test.py
client/vault/src/: client.rs  lib.rs  lock_ext.rs  methods.rs  retry.rs  view_client.rs  view_core.rs
client/vault/web/: README.md  package-lock.json  package.json  tsconfig.json
common/: Cargo.toml  build.rs
common/src/: accumulator.rs  asset.rs  balance_log.rs  borrow.rs  chain_time.rs  chunked_append_only_list.rs  event.rs  fee.rs  governance.rs  guard.rs  harvested.rs  incentive.rs  incoming_deposit.rs  interest_rate_strategy.rs  lib.rs  market_log.rs  market_supply.rs  number.rs  price.rs  registry.rs  snapshot.rs  static_yield.rs  supply.rs  time.rs  time_chunk.rs  utils.rs  vault.rs  versioned_state.rs  virtual_credit.rs  withdrawal_queue.rs
common/src/collection/: chunked_append_only_list.rs  mod.rs  withdrawal_queue.rs
common/src/config/: env.rs
common/src/data/: accumulator.rs  asset.rs  interest_rate_strategy.rs  mod.rs  number.rs  price.rs
common/src/kernel/: mod.rs
common/src/market/: balance_oracle_configuration.rs  configuration.rs  external.rs  impl.rs  mod.rs  price_oracle_configuration.rs
common/src/oracle/: mod.rs  price_transformer.rs  proxy.rs  pyth.rs  time.rs
common/src/position/: borrow.rs  mod.rs  supply.rs
common/src/vault/: errors.rs  event.rs  external.rs  gas.rs  lock.rs  mod.rs  params.rs  restrictions.rs  state.rs  tests.rs  wad.rs
common/src/versioned_state/: core.rs  macros.rs  mod.rs  near.rs
contract/governance-kernel/: Cargo.toml
contract/governance-kernel/src/: lib.rs
contract/market/: AGENTS.md  Cargo.toml
contract/market/examples/: gas_report.rs  generate_testnet_configuration.rs  load_configuration.rs  receipt_gas.rs
contract/market/src/: impl_ft_receiver.rs  impl_helper.rs  impl_market_external.rs  impl_token_receiver.rs  lib.rs
contract/market/tests/: 0_many_accounts.rs  0_many_snapshots.rs  accumulations.rs  borrow_limits.rs  collateral.rs  compounding_yield.rs  configuration_validation.rs  disabled_when_liquidatable.rs  empty_positions.rs  fast_borrow.rs  happy_path.rs  harvest_yield_gas.rs  interest_rate.rs  liquidation.rs  many_accounts.rs  many_snapshots.rs  maximum_borrow_asset_usage_ratio.rs  maximum_borrow_duration_ms.rs  mcr_maintenance.rs  message_regression.rs  minimum_initial_collateral_ratio.rs  parse_configurations.rs  repay.rs  snapshot.rs  static_yield.rs  storage_management.rs  supply_activation.rs  supply_maximum_amount.rs  supply_withdrawal_fee.rs  supply_withdrawal_queue.rs  supply_within_snapshot.rs  untracked_funds.rs  usage_ratio_over_1.rs  with_proxy_oracle.rs
contract/proxy-4626-soroban/: Cargo.toml
contract/proxy-4626-soroban/src/: contract.rs  error.rs  lib.rs  tests.rs
contract/proxy-4626-soroban/tests/: integration_tests.rs
contract/proxy-curator-soroban/: Cargo.toml
contract/proxy-curator-soroban/src/: contract.rs  error.rs  governance_abi.rs  lib.rs  tests.rs
contract/redstone-adapter/: Cargo.toml
contract/redstone-adapter/src/: event.rs  (+3 more)
contract/vault/: Cargo.toml  PARITY_TESTS.md  README.md  STRIDE.md  justfile
contract/vault-counterparty/: .env.example  Cargo.toml  README.md  justfile
fuzz/: AGENTS.md  Cargo.toml  PRINCIPLES.md  README.md  TRIAGE.md  run_fuzzing.sh
fuzz/fuzz_targets/: fuzz_accumulator.rs  fuzz_borrow.rs  fuzz_borrow_invariants.rs  fuzz_borrow_overflow.rs  fuzz_collateral_combined.rs  fuzz_collateral_deposit.rs  fuzz_collateral_ops.rs  fuzz_collateral_overflow.rs  fuzz_decimal_arithmetic.rs  fuzz_decimal_parsing.rs  fuzz_decimals.rs  fuzz_deposit_msg.rs  fuzz_fee_math.rs  fuzz_interest_math.rs  fuzz_liquidations.rs  fuzz_liquidator_logic.rs  fuzz_liquidator_transactions.rs  fuzz_market_creation.rs  fuzz_price.rs  fuzz_price_calculations.rs  fuzz_snapshot.rs  fuzz_soroban_custodial_adapter.rs  fuzz_soroban_storage_codecs.rs  fuzz_supply.rs  fuzz_supply_overflow.rs  fuzz_vault_state_machine.rs
fuzz/seeds/: README.md
fuzz/src/: account_id.rs  lib.rs
gateway/catalog/: Cargo.toml
gateway/client/: Cargo.toml
gateway/core/: Cargo.toml
gateway/methods-dispatch/: Cargo.toml
gateway/methods-spec/: Cargo.toml
gateway/near/: Cargo.toml  build.rs
gateway/oracle/: Cargo.toml
gateway/oracle-pyth/: Cargo.toml
gateway/oracle-redstone/: Cargo.toml
gateway/oracle-updates-dispatch/: Cargo.toml
gateway/oracle-updates-spec/: Cargo.toml
market-config-cli/: Cargo.toml  README.md
market-config-cli/src/: commands.rs  lib.rs  logger.rs  main.rs  prompts.rs  rpc.rs
primitives/: Cargo.toml
primitives/src/: lib.rs  number.rs  strnum.rs  time.rs
test-utils/: Cargo.toml  build.rs
test-utils/examples/: generate_testnet_configuration.rs  registry_add_version_args.rs
test-utils/src/: lib.rs  partial.rs  pyth_price_id.rs  test_signer.rs
universal-account/: Cargo.toml
universal-account/src/: contract_state.rs  event.rs  execute_args.rs  init_args.rs  key_id.rs  lib.rs  transaction.rs
(+1671 files in other folders)
