[workspace]
resolver = "3"
members = [
    "common",
    "contract/lst-oracle",
    "contract/market",
    "contract/proxy-4626-soroban",
    "contract/proxy-curator-soroban",
    "contract/proxy-oracle",
    "contract/redstone-adapter",
    "contract/registry",
    "contract/vault/macros",
    "contract/universal-account",
    "contract/vault/curator-primitives",
    "contract/vault/kernel",
    "contract/vault/near",
    "contract/vault/soroban",
    "contract/vault/soroban/shared-types",
    "contract/vault/soroban/blend-adapter",
    "contract/vault/soroban/governance",
    "contract/vault/soroban/share-token",
    "fuzz",
    "tools/*",
    "client/*",
    "mock/*",
    "service/*",
    "test-utils",
    "universal-account",
]

[workspace.package]
license = "MIT"
repository = "https://github.com/Templar-Protocol/contracts"
edition = "2021"
version = "1.2.1"

[workspace.dependencies]
alloy = { version = "1", default-features = false }
alloy-primitives = { version = "1", default-features = false }
anyhow = "1.0.95"
arbitrary = { version = "1", features = ["derive"] }
async-trait = "0.1.88"
base64 = "0.22.1"
borsh = { version = "1.5", features = ["unstable__schema"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
console = "0.16.2"
dirs = "6"
ed25519-dalek = "2.2.0"
futures = "0.3.31"
derive_more = { version = "1", default-features = false, features = [
    "from",
    "into",
    "display",
    "is_variant",
] }
getrandom = { version = "0.2", features = ["custom"] }
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.4"
itertools = "0.14.0"
k256 = "0.13.4"
libfuzzer-sys = "0.4"
near-account-id = "1.1.4"
near-chain-configs = "0.31.1"
near-contract-standards = "5.17.2"
near-crypto = "0.31.1"
near-fetch = "0.9.0"
near-jsonrpc-client = "0.18.0"
near-jsonrpc-primitives = "0.31.1"
near-parameters = "0.31.1"
near-primitives = "0.31.1"
near-sdk = { version = "5.17.2", features = ["unstable"] }
near-sdk-contract-tools = { git = "https://github.com/near/near-sdk-contract-tools", branch = "140-nep-245-multitoken-component" }
near-workspaces = { version = "0.21.0", features = ["unstable"] }
p256 = "0.13.2"
primitive-types = { version = "0.14.0", features = ["serde"] }
redstone = { git = "https://github.com/redstone-finance/rust-sdk", tag = "3.1.0-pre1", default-features = false }
rstest = { version = "0.24" }
schemars = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
solana-sdk = "3.0.0"
templar-common = { path = "./common" }
templar-redstone-bridge = { path = "./service/redstone-bridge" }
templar-tools-common = { path = "./tools/tools-common" }
templar-universal-account = { path = "./universal-account" }
templar-vault-contract = { path = "./contract/vault/near" }
templar-vault-kernel = { path = "./contract/vault/kernel", features = [
    "near",
    "borsh-schema",
    "serde",
    "schemars",
    "all-actions",
] }
templar-vault-macros = { path = "./contract/vault/macros" }
test-utils = { path = "./test-utils" }
thiserror = "2.0.11"
tokio = { version = "1.30.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uniffi = "0.31.0"
wiremock = "0.5.22"
zeroize = "1.8.1"

stellar-contract-utils = { git = "https://github.com/Templar-Protocol/stellar-contracts.git", package = "stellar-contract-utils", branch = "templar/rust-1.86-compat", default-features = false }
stellar-tokens = { git = "https://github.com/Templar-Protocol/stellar-contracts.git", package = "stellar-tokens", branch = "templar/rust-1.86-compat", default-features = false }

[patch.crates-io]
stellar-contract-utils = { git = "https://github.com/Templar-Protocol/stellar-contracts.git", package = "stellar-contract-utils", branch = "templar/rust-1.86-compat" }
stellar-tokens = { git = "https://github.com/Templar-Protocol/stellar-contracts.git", package = "stellar-tokens", branch = "templar/rust-1.86-compat" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
large_futures = "allow"
redundant_closure_for_method_calls = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unwrap_used = "warn"
expect_used = "warn"
large_digit_groups = "warn"
wildcard_imports = "allow"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = "fat"
debug = false
panic = "abort"
strip = "symbols"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

# Soroban-specific release profile (use with --profile release-soroban)
# Dependencies don't need overflow-check panic strings in WASM — saves ~2.5 KiB.
[profile.release-soroban]
inherits = "release"
opt-level = "z"
lto = "fat"
debug = false
panic = "abort"
strip = "symbols"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = false


[profile.release-soroban.package."*"]
overflow-checks = false

# https://github.com/launchbadge/sqlx?tab=readme-ov-file#compile-time-verification
[profile.dev.package.sqlx-macros]
opt-level = 3

# Coverage profile for testing
[profile.coverage]
inherits = "dev"
debug = true
# Disable optimizations to get accurate coverage
opt-level = 0
overflow-checks = false
