[workspace]
resolver = "3"
members = [
    "common",
    "contract/market",
    "contract/proxy-4626-soroban",
    "contract/proxy-oracle/governance-kernel",
    "contract/proxy-oracle/kernel",
    "contract/proxy-oracle/near/common",
    "contract/proxy-oracle/near/contract",
    "contract/proxy-oracle/near/governance-common",
    "contract/proxy-oracle/near/governance-contract",
    "contract/proxy-oracle/near/lst-contract",
    "contract/proxy-oracle/soroban/contract",
    "contract/proxy-oracle/soroban/governance-common",
    "contract/proxy-oracle/soroban/governance-contract",
    "contract/proxy-oracle/soroban/common",
    "contract/proxy-oracle/soroban/integration-tests",
    "contract/proxy-oracle/soroban/sep40-adapter-contract",
    "contract/redstone-adapter",
    "contract/registry",
    "contract/vault/macros",
    "contract/universal-account",
    "contract/vault/curator-primitives",
    "contract/vault/kernel",
    "contract/vault/near",
    "contract/vault/soroban",
    "contract/vault/soroban/shared-types",
    "contract/vault/soroban/blend-adapter",
    "contract/vault/soroban/governance",
    "contract/vault/soroban/share-token",
    "fuzz",
    "tools/*",
    "client/*",
    "mock/*",
    "service/*",
    "test-utils",
    "universal-account", "primitives",
]

[workspace.package]
license = "MIT"
repository = "https://github.com/Templar-Protocol/contracts"
edition = "2021"
version = "1.2.1"

[workspace.dependencies]
alloy = { version = "1", default-features = false }
alloy-primitives = { version = "1", default-features = false }
anyhow = "1.0.102"
arbitrary = { version = "1", features = ["derive"] }
async-trait = "0.1.89"
axum = "0.8.8"
base64 = "0.22.1"
borsh = { version = "1.5", features = ["unstable__schema"] }
bs58 = "0.5.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
console = "0.16.3"
dirs = "6"
ed25519-dalek = "2.2.0"
futures = "0.3.31"
derive_more = { version = "1", default-features = false, features = [
    "from",
    "into",
    "display",
    "is_variant",
] }
getrandom = { version = "0.2", features = ["custom"] }
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.4"
itertools = "0.14.0"
k256 = "0.13.4"
libfuzzer-sys = "0.4"
near-account-id = "2.6"
near-chain-configs = "0.34.7"
near-contract-standards = "5.25"
near-crypto = "0.34.7"
near-jsonrpc-client = "0.20.0"
near-jsonrpc-primitives = "0.34.7"
near-parameters = "0.34.7"
near-primitives = "0.34.7"
near-primitives-core = "0.34.7"
near-sdk = { version = "5.25", features = ["unstable"] }
near-sdk-contract-tools = "4.0.0"
near-workspaces = { version = "0.22.1", features = ["unstable"] }
p256 = "0.13.2"
primitive-types = { version = "0.14.0", features = ["serde"] }
redstone = { git = "https://github.com/redstone-finance/rust-sdk", tag = "3.1.0-pre1", default-features = false }
reqwest = "0.12.28"
rstest = { version = "0.24" }
schemars = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
solana-sdk = "3.0.0"
stellar-strkey = { version = "0.0.16", default-features = false }
templar-common = { path = "./common" }
templar-primitives = { path = "./primitives" }
templar-proxy-oracle-governance-kernel = { path = "./contract/proxy-oracle/governance-kernel" }
templar-proxy-oracle-kernel = { path = "./contract/proxy-oracle/kernel" }
templar-proxy-oracle-near-common = { path = "./contract/proxy-oracle/near/common" }
templar-proxy-oracle-near-contract = { path = "./contract/proxy-oracle/near/contract" }
templar-proxy-oracle-near-governance-common = { path = "./contract/proxy-oracle/near/governance-common" }
templar-proxy-oracle-near-governance-contract = { path = "./contract/proxy-oracle/near/governance-contract" }
templar-redstone-bridge = { path = "./service/redstone-bridge" }
templar-tools-common = { path = "./tools/tools-common" }
templar-universal-account = { path = "./universal-account" }
templar-vault-contract = { path = "./contract/vault/near" }
templar-vault-kernel = { path = "./contract/vault/kernel", features = [
    "near",
    "borsh-schema",
    "serde",
    "schemars",
    "all-actions",
] }
templar-vault-macros = { path = "./contract/vault/macros" }
test-utils = { path = "./test-utils" }
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uniffi = "0.31.0"
wiremock = "0.5.22"
zeroize = "1.8.2"

stellar-contract-utils = { version = "0.7.1", default-features = false }
stellar-tokens = { version = "0.7.1", default-features = false }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
large_futures = "allow"
redundant_closure_for_method_calls = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unwrap_used = "deny"
expect_used = "warn"
large_digit_groups = "warn"
wildcard_imports = "allow"
doc_markdown = "allow"
result_large_err = "allow"
ignore_without_reason = "allow"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = "fat"
debug = false
panic = "abort"
strip = "symbols"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

# Soroban-specific release profile (use with --profile release-soroban)
# Dependencies don't need overflow-check panic strings in WASM — saves ~2.5 KiB.
[profile.release-soroban]
inherits = "release"
opt-level = "z"
lto = "fat"
debug = false
panic = "abort"
strip = "symbols"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = false


[profile.release-soroban.package."*"]
overflow-checks = false

# Like `release-soroban`, but with overflow-checks enabled on our own crates.
# The proxy-oracle contracts build via `stellar contract build`, which mandates
# overflow-checks = true on the contract. Kept as a SEPARATE profile so other
# Soroban contracts (e.g. the vault) that use `release-soroban` are unaffected —
# their builds and WASM sizes do not change. External dependencies keep
# overflow-checks off to limit size.
[profile.release-soroban-checked]
inherits = "release-soroban"
overflow-checks = true

[profile.release-soroban-checked.package."*"]
overflow-checks = false

# https://github.com/launchbadge/sqlx?tab=readme-ov-file#compile-time-verification
[profile.dev.package.sqlx-macros]
opt-level = 3

# Coverage profile for testing
[profile.coverage]
inherits = "dev"
debug = true
# Disable optimizations to get accurate coverage
opt-level = 0
overflow-checks = false
