[package]
name = "templar-bots"
version = "0.1.0"
edition = "2024"
license.workspace = true

[[bin]]
name = "liquidator"
path = "src/bin/liquidator-bot.rs"

[[bin]]
name = "accumulator"
path = "src/bin/accumulator-bot.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
near-sdk = { workspace = true }
near-crypto = { workspace = true }
near-jsonrpc-client = { workspace = true }
near-jsonrpc-primitives = { workspace = true }
near-primitives = { workspace = true }
templar-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
