[package]
edition.workspace = true
license.workspace = true
name = "templar-bots"
repository.workspace = true
version = "0.1.0"

[[bin]]
name = "liquidator"
path = "src/bin/liquidator-bot.rs"

[[bin]]
name = "accumulator"
path = "src/bin/accumulator-bot.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
clap.workspace = true
futures.workspace = true
near-crypto.workspace = true
near-jsonrpc-client.workspace = true
near-jsonrpc-primitives.workspace = true
near-primitives.workspace = true
near-sdk.workspace = true
templar-common = { workspace = true, features = ["rpc"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
test-utils.workspace = true
near-workspaces.workspace = true

[lints]
workspace = true
