[package]
edition.workspace = true
license.workspace = true
name = "templar-common"
repository.workspace = true
version = "1.3.0"

[dependencies]
borsh = { workspace = true, features = ["rc"] }
hex-literal.workspace = true
hex.workspace = true
k256.workspace = true
near-contract-standards.workspace = true
near-sdk-contract-tools.workspace = true
near-sdk.workspace = true
primitive-types.workspace = true
redstone = { workspace = true, default-features = false, features = [] }
schemars.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { workspace = true, optional = true }
near-jsonrpc-client = { workspace = true, optional = true }
near-primitives = { workspace = true, optional = true }
sha2.workspace = true

[dev-dependencies]
rstest.workspace = true
near-sdk = { workspace = true, features = ["unit-testing"] }
rand = "0.8"

[lints]
workspace = true

[features]
default = []
non-contract-usage = ["near-sdk/non-contract-usage"]
rpc = ["dep:clap", "dep:near-jsonrpc-client", "dep:near-primitives"]
