[package]
edition.workspace = true
license.workspace = true
name = "templar-common"
repository.workspace = true
version = "1.3.0"

[dependencies]
borsh.workspace = true
derive_more.workspace = true
hex.workspace = true
near-contract-standards.workspace = true
near-sdk.workspace = true
templar-vault-kernel.workspace = true
thiserror.workspace = true
primitive-types.workspace = true
schemars.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { workspace = true, optional = true }
near-jsonrpc-client = { workspace = true, optional = true }
near-primitives = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
near-sdk = { workspace = true, features = ["unit-testing"] }
rand = "0.8"

[lints]
workspace = true

[features]
default = []
rpc = ["dep:clap", "dep:near-jsonrpc-client", "dep:near-primitives"]
non-contract-usage = ["near-sdk/non-contract-usage"]
