[package]
edition.workspace = true
license.workspace = true
name = "templar-fuzz"
publish = false
repository.workspace = true
version = "0.0.0"

[dependencies]
arbitrary.workspace = true
hex-literal.workspace = true
libfuzzer-sys.workspace = true
near-sdk = { workspace = true, features = ["non-contract-usage"] }
primitive-types.workspace = true
templar-common = { workspace = true, features = ["non-contract-usage"] }
templar-vault-kernel = { path = "../contract/vault/kernel", features = ["postcard", "soroban"] }
templar-curator-primitives = { path = "../contract/vault/curator-primitives", features = ["postcard"] }
templar-soroban-runtime = { path = "../contract/vault/soroban", features = ["testutils"] }

[lints]
workspace = true

[package.metadata]
cargo-fuzz = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fuzz_borrow_invariants"
path = "fuzz_targets/fuzz_borrow_invariants.rs"
test = false
bench = false

[[bin]]
name = "fuzz_borrow"
path = "fuzz_targets/fuzz_borrow.rs"
test = false
bench = false

[[bin]]
name = "fuzz_borrow_overflow"
path = "fuzz_targets/fuzz_borrow_overflow.rs"
test = false
bench = false

[[bin]]
name = "fuzz_decimal_arithmetic"
path = "fuzz_targets/fuzz_decimal_arithmetic.rs"
test = false
bench = false

[[bin]]
name = "fuzz_decimal_parsing"
path = "fuzz_targets/fuzz_decimal_parsing.rs"
test = false
bench = false

[[bin]]
name = "fuzz_decimals"
path = "fuzz_targets/fuzz_decimals.rs"
test = false
bench = false

[[bin]]
name = "fuzz_interest_math"
path = "fuzz_targets/fuzz_interest_math.rs"
test = false
bench = false

[[bin]]
name = "fuzz_fee_math"
path = "fuzz_targets/fuzz_fee_math.rs"
test = false
bench = false

[[bin]]
name = "fuzz_liquidations"
path = "fuzz_targets/fuzz_liquidations.rs"
test = false
bench = false

# fuzz_liquidator_logic removed: it was a toy reimplementation testing only
# harness arithmetic (P1). Its real counterpart is the off-chain
# `ProfitabilityCalculator` in the `templar-liquidator` crate, which pulls a
# full async stack (tokio/reqwest/jsonrpc) — not worth dragging into a
# libFuzzer binary for an off-chain, non-fund-critical pure function. On-chain
# liquidation amounts are covered by `fuzz_liquidations`. Tracked: ENG-344.

[[bin]]
name = "fuzz_deposit_msg"
path = "fuzz_targets/fuzz_deposit_msg.rs"
test = false
bench = false

[[bin]]
name = "fuzz_market_creation"
path = "fuzz_targets/fuzz_market_creation.rs"
test = false
bench = false

[[bin]]
name = "fuzz_price"
path = "fuzz_targets/fuzz_price.rs"
test = false
bench = false

[[bin]]
name = "fuzz_price_calculations"
path = "fuzz_targets/fuzz_price_calculations.rs"
test = false
bench = false

[[bin]]
name = "fuzz_supply"
path = "fuzz_targets/fuzz_supply.rs"
test = false
bench = false

[[bin]]
name = "fuzz_supply_overflow"
path = "fuzz_targets/fuzz_supply_overflow.rs"
test = false
bench = false

[[bin]]
name = "fuzz_soroban_storage_codecs"
path = "fuzz_targets/fuzz_soroban_storage_codecs.rs"
test = false
bench = false

[[bin]]
name = "fuzz_vault_state_machine"
path = "fuzz_targets/fuzz_vault_state_machine.rs"
test = false
bench = false

[[bin]]
name = "fuzz_accumulator"
path = "fuzz_targets/fuzz_accumulator.rs"
test = false
bench = false

[[bin]]
name = "fuzz_snapshot"
path = "fuzz_targets/fuzz_snapshot.rs"
test = false
bench = false
