[package]
name = "market-config-cli"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "market_config_cli"
path = "src/lib.rs"

[[bin]]
name = "market-config"
path = "src/main.rs"

[dependencies]
# CLI dependencies
dialoguer = "0.12.0"
console = "0.16.1"
indicatif = "0.18.3"
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
near-crypto = { workspace = true }
near-jsonrpc-client = { workspace = true }
near-jsonrpc-primitives = { workspace = true }
near-primitives = { workspace = true }
near-sdk = { workspace = true, features = ["non-contract-usage"] }
templar-common = { workspace = true, features = ["non-contract-usage"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
borsh = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = "0.4"
url = "2.5"
near-contract-standards.workspace = true
once_cell = "1.21.3"

[dev-dependencies]
rstest = { workspace = true }
tempfile = "3.13"

[lints]
workspace = true
