[package]
name = "templar-primitives"
license.workspace = true
repository.workspace = true
edition.workspace = true
version = "0.1.0"

[dependencies]
borsh = { version = "1.5", default-features = false, features = [], optional = true }
primitive-types = { version = "0.14", default-features = false, features = [] }
redstone = { workspace = true, default-features = false, features = [], optional = true }
serde = { version = "1", default-features = false, features = ["alloc", "derive"], optional = true }
schemars = { version = "0.8", default-features = false, features = [], optional = true }
near-sdk = { workspace = true, default-features = false, features = [], optional = true }
thiserror = { version = "2", default-features = false, features = [] }

[dev-dependencies]
rand = "0.8"
rstest.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["borsh/std", "serde/std", "primitive-types/std", "thiserror/std"]
borsh = ["dep:borsh"]
schemars = ["std", "dep:schemars"]
serde = ["dep:serde"]
near = ["dep:near-sdk", "serde", "schemars", "borsh"]
redstone = ["dep:redstone"]
