[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"
publish = false
license.workspace = true

[dependencies]
hex-literal = "0.4"
near-sdk.workspace = true
near-sdk-contract-tools.workspace = true
near-workspaces.workspace = true
primitive-types.workspace = true
templar-common.workspace = true
tokio.workspace = true

[[example]]
name = "generate_testnet_configuration"

[[example]]
name = "registry_add_version_args"
