[package]
name = "templar-universal-account"
license.workspace = true
repository.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
alloy = { workspace = true, default-features = false, features = ["eip712", "signers", "sol-types"] }
borsh.workspace = true
hex.workspace = true
near-account-id.workspace = true
near-sdk = { workspace = true, features = ["global-contracts"] }
p256.workspace = true
schemars.workspace = true
solana-sdk.workspace = true
thiserror.workspace = true

[dev-dependencies]
alloy = { workspace = true, default-features = false, features = ["signer-local"] }
near-sdk = { workspace = true, features = ["unit-testing", "non-contract-usage"] }
rstest.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
near-chain-configs.workspace = true
near-parameters.workspace = true
near-primitives.workspace = true
near-sdk = { workspace = true, features = ["non-contract-usage"] }

[features]
default = []
signing = ["alloy/signer-local"]

[lints]
workspace = true
