[package]
name = "templar-accumulator"
edition.workspace = true
license.workspace = true
repository.workspace = true
version = "0.1.0"

[[bin]]
name = "accumulator"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
near-crypto = { workspace = true }
near-jsonrpc-client = { workspace = true }
near-primitives = { workspace = true }
near-sdk = { workspace = true, features = ["non-contract-usage"] }
templar-bots-common = { path = "../common" }
templar-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
