[package]
name = "templar-bots-common"
edition.workspace = true
license.workspace = true
repository.workspace = true
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
near-crypto = { workspace = true }
near-jsonrpc-client = { workspace = true }
near-jsonrpc-primitives = { workspace = true }
near-primitives = { workspace = true }
near-sdk = { workspace = true, features = ["non-contract-usage"] }
serde_json = "1.0"
templar-common = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
