[package]
name = "templar-liquidator"
edition.workspace = true
license.workspace = true
repository.workspace = true
version = "0.1.0"

[[bin]]
name = "liquidator"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
near-crypto = { workspace = true }
near-jsonrpc-client = { workspace = true }
near-primitives = { workspace = true }
near-sdk = { workspace = true, features = ["non-contract-usage"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
templar-bots-common = { path = "../common" }
templar-common = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
